Сделать проектную работу 4

--- a/index.html
+++ b/index.html
@@ -65,15 +65,16 @@
         <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
       </footer> 
   </div>
+
   <section class="popup">
     <div class="popup__container">
       <button class="popup__button-close" type="button"></button>
       <h2 class="popup__header">Редактировать профиль</h2>
-      <p class="popup__text">Жак-Ив Кусто</p>
-      <div class="popup__line"></div>
-      <p class="popup__text">Исследователь океана</p>
-      <div class="popup__line"></div>
-      <button class="popup__button-submit">Сохранить</button>
+      <form class="popup__form">
+        <input class="popup__input popup__input_type_name" type="text" name="inputName" id="name" placeholder="Имя" value="Жак-Ив Кусто" required>
+        <input class="popup__input popup__input_type_profession" type="text" name="inputText" id="text" placeholder="О себе" value="Исследователь океана" required>
+        <input class="popup__button-submit" type="submit" name="submit" id="popup-submit" value="Сохранить">
+      </form> 
     </div>
   </section>
 
