Сделать практическую работу №5

--- a/index.html
+++ b/index.html
@@ -31,44 +31,7 @@
         </button>
       </section>
 
-      <section class="elements">
-        <article class="element">
-          <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Фотография храма в горах"
-            class="element__picture">
-          <h2 class="element__text">Карачаевск</h2>
-          <button type="button" class="element__button-like"></button>
-        </article>
-        <article class="element">
-          <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Фотография горы Эльбрус"
-            class="element__picture">
-          <h2 class="element__text">Гора Эльбрус</h2>
-          <button type="button" class="element__button-like"></button>
-        </article>
-        <article class="element">
-          <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Фотография горного хребта Домбай"
-            class="element__picture">
-          <h2 class="element__text">Домбай</h2>
-          <button type="button" class="element__button-like"></button>
-        </article>
-        <article class="element">
-          <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Фотография горы Эльбрус"
-            class="element__picture">
-          <h2 class="element__text">Гора Эльбрус</h2>
-          <button type="button" class="element__button-like"></button>
-        </article>
-        <article class="element">
-          <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Фотография горного хребта Домбай"
-            class="element__picture">
-          <h2 class="element__text">Домбай</h2>
-          <button type="button" class="element__button-like"></button>
-        </article>
-        <article class="element">
-          <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Фотография храма в горах"
-            class="element__picture">
-          <h2 class="element__text">Карачаево-Черкессия</h2>
-          <button type="button" class="element__button-like"></button>
-        </article>
-      </section>
+      <section class="elements"></section>
     </main>
 
     <footer class="footer">
@@ -89,6 +52,41 @@
       <button class="popup__button-submit" type="submit" form="popup__form">Сохранить</button>
     </div>
   </section>
+
+  <section class="popup popup_new-place">
+    <div class="popup__place-container">
+      <button class="popup__button-close" type="button"></button>
+      <h2 class="popup__header">Новое место</h2>
+      <form class="popup__form" name="form_places" id="popup__form_places">
+        <input class="popup__input popup__input_type_name" type="text" name="inputName" id="name" placeholder="Название"
+          value="" required>
+        <input class="popup__input popup__input_type_link" type="text" name="inputText" id="text"
+          placeholder="Ссылка на картинку" value="" required>
+      </form>
+      <button class="popup__button-save" type="submit" form="popup__form_places">Создать</button>
+    </div>
+  </section>
+
+  <template id="element-template">
+    <article class="element">
+      <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Фотография горы Эльбрус" class="element__picture">
+      <div class="element__container">
+        <h2 class="element__text">Гора Эльбрус</h2>
+        <button type="button" class="element__button-like"></button>
+      </div>
+      <button type="button" class="element__button-delete"></button>
+    </article>
+  </template>
+
+  <template id="image-popup">
+    <section class="popup popup_places">
+      <div class="popup__image-container">
+        <button class="popup__button-close" type="button"></button>
+        <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Фотография храма в горах" class="popup__picture">
+        <h3 class="popup__image-caption">Карачаевск</h3>
+      </div>
+    </section>
+  </template>
 
   <script src="./scripts/index.js"></script>
 </body>
