--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
     </div>
   </section>
 
+  <section class="popup popup_places">
+    <div class="popup__image-container">
+      <button class="popup__button-close" type="button"></button>
+      <img src="./images/shtabnykh_photo-RfzgBkOsmWQ-unsplash.jpg" alt="Фотография " class="popup__picture">
+      <h3 class="popup__image-caption">Катунь</h3>
+    </div>
+  </section>
+
   <template id="element-template">
     <article class="element">
       <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Фотография горы Эльбрус" class="element__picture">
@@ -76,16 +84,6 @@
       </div>
       <button type="button" class="element__button-delete"></button>
     </article>
-  </template>
-
-  <template id="image-popup">
-    <section class="popup popup_places">
-      <div class="popup__image-container">
-        <button class="popup__button-close" type="button"></button>
-        <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Фотография храма в горах" class="popup__picture">
-        <h3 class="popup__image-caption">Карачаевск</h3>
-      </div>
-    </section>
   </template>
 
   <script src="./scripts/index.js"></script>
