--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       <button class="popup__button-close" type="button"></button>
       <h2 class="popup__header">Новое место</h2>
       <form class="popup__form" name="form_places" id="popup__form_places">
-        <input class="popup__input popup__input_type_name" type="text" name="inputName" id="name" placeholder="Название"
-          value="" required>
-        <input class="popup__input popup__input_type_link" type="text" name="inputText" id="text"
+        <input class="popup__input popup__input_type_name" type="text" name="inputTitle" id="title"
+          placeholder="Название" value="" required>
+        <input class="popup__input popup__input_type_link" type="text" name="inputLink" id="link"
           placeholder="Ссылка на картинку" value="" required>
       </form>
       <button class="popup__button-save" type="submit" form="popup__form_places">Создать</button>
