--- a/index.html
+++ b/index.html
@@ -43,13 +43,19 @@
     <div class="popup__container">
       <button class="popup__button-close" type="button"></button>
       <h2 class="popup__header">Редактировать профиль</h2>
-      <form class="popup__form" name="form" id="popup__form">
-        <input class="popup__input popup__input_type_name" type="text" name="inputName" id="name" placeholder="Имя"
-          value="" required>
-        <input class="popup__input popup__input_type_profession" type="text" name="inputText" id="text"
-          placeholder="О себе" value="" required>
+      <form class="popup__form" name="editProfile" id="popup__form" novalidate>
+        <div class="popup__section">
+          <input class="popup__input popup__input_type_name" type="text" name="inputName" id="name" placeholder="Имя"
+            value="" required minlength="2" maxlength="40">
+          <span class="popup__error" id="inputName-error"></span>
+        </div>
+        <div class="popup__section">
+          <input class="popup__input popup__input_type_profession" type="text" name="inputText" id="text"
+            placeholder="О себе" value="" required minlength="2" maxlength="200">
+          <span class="popup__error" id="inputText-error"></span>
+        </div>
       </form>
-      <button class="popup__button-submit" type="submit" form="popup__form">Сохранить</button>
+      <button class="popup__button" type="submit" form="popup__form">Сохранить</button>
     </div>
   </div>
 
@@ -57,13 +63,19 @@
     <div class="popup__place-container">
       <button class="popup__button-close" type="button"></button>
       <h2 class="popup__header">Новое место</h2>
-      <form class="popup__form" name="form_places" id="popup__form_places">
-        <input class="popup__input popup__input_type_name" type="text" name="inputTitle" id="title"
-          placeholder="Название" value="" required>
-        <input class="popup__input popup__input_type_link" type="text" name="inputLink" id="link"
-          placeholder="Ссылка на картинку" value="" required>
+      <form class="popup__form" name="addPlace" id="popup__form_places" novalidate>
+        <div class="popup__section">
+          <input class="popup__input popup__input_type_name" type="text" name="inputTitle" id="title"
+            placeholder="Название" value="" required minlength="2" maxlength="30">
+          <span class="popup__error" id="inputTitle-error"></span>
+        </div>
+        <div class="popup__section">
+          <input class="popup__input popup__input_type_link" type="url" name="inputLink" id="link"
+            placeholder="Ссылка на картинку" value="" required>
+          <span class="popup__error" id="inputLink-error"></span>
+        </div>
       </form>
-      <button class="popup__button-save" type="submit" form="popup__form_places">Создать</button>
+      <button class="popup__button" type="submit" form="popup__form_places">Создать</button>
     </div>
   </div>
 
@@ -86,6 +98,7 @@
     </article>
   </template>
 
+  <script src="./scripts/validate.js"></script>
   <script src="./scripts/cards.js"></script>
   <script src="./scripts/index.js"></script>
 </body>
