--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 
   <template id="element-template">
     <article class="element">
-      <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Фотография горы Эльбрус" class="element__picture">
+      <img src="./images/nick-night-p9O_YJIZC7g-unsplash.jpg" alt="Гейзерное озеро" class="element__picture">
       <div class="element__container">
-        <h2 class="element__text">Гора Эльбрус</h2>
+        <h2 class="element__text">Гейзерное озеро</h2>
         <button type="button" class="element__button-like"></button>
       </div>
       <button type="button" class="element__button-delete"></button>
@@ -99,8 +99,7 @@
   </template>
 
   <script src="./scripts/validate.js"></script>
-  <script src="./scripts/cards.js"></script>
-  <script src="./scripts/index.js"></script>
+  <script src="./scripts/index.js" type="module"></script>
 </body>
 
 </html>
