--- a/src/index.html
+++ b/src/index.html
@@ -45,13 +45,13 @@
       <h2 class="popup__header">Редактировать профиль</h2>
       <form class="popup__form" name="editProfile" id="popup__form" novalidate>
         <div class="popup__section">
-          <input class="popup__input popup__input_type_name" type="text" name="inputName" id="name" placeholder="Имя"
+          <input class="popup__input popup__input_type_name" type="text" name="name" id="name" placeholder="Имя"
             value="" required minlength="2" maxlength="40">
           <span class="popup__error" id="inputName-error"></span>
         </div>
         <div class="popup__section">
-          <input class="popup__input popup__input_type_profession" type="text" name="inputText" id="text"
-            placeholder="О себе" value="" required minlength="2" maxlength="200">
+          <input class="popup__input popup__input_type_profession" type="text" name="job" id="text" placeholder="О себе"
+            value="" required minlength="2" maxlength="200">
           <span class="popup__error" id="inputText-error"></span>
         </div>
       </form>
@@ -65,12 +65,12 @@
       <h2 class="popup__header">Новое место</h2>
       <form class="popup__form" name="addPlace" id="popup__form_places" novalidate>
         <div class="popup__section">
-          <input class="popup__input popup__input_type_name" type="text" name="inputTitle" id="title"
-            placeholder="Название" value="" required minlength="2" maxlength="30">
+          <input class="popup__input popup__input_type_name" type="text" name="name" id="title" placeholder="Название"
+            value="" required minlength="2" maxlength="30">
           <span class="popup__error" id="inputTitle-error"></span>
         </div>
         <div class="popup__section">
-          <input class="popup__input popup__input_type_link" type="url" name="inputLink" id="link"
+          <input class="popup__input popup__input_type_link" type="url" name="link" id="link"
             placeholder="Ссылка на картинку" value="" required>
           <span class="popup__error" id="inputLink-error"></span>
         </div>
@@ -82,7 +82,7 @@
   <div class="popup popup_places">
     <div class="popup__image-container">
       <button class="popup__button-close" type="button"></button>
-      <img src="<%=require('./images/shtabnykh_photo-RfzgBkOsmWQ-unsplash.jpg')%>" alt="Фотография "
+      <img src="<%=require('./images/shtabnykh_photo-RfzgBkOsmWQ-unsplash.jpg')%>" alt="Фотография"
         class="popup__picture">
       <h3 class="popup__image-caption">Катунь</h3>
     </div>
