--- a/src/index.html
+++ b/src/index.html
@@ -25,12 +25,12 @@
         </div>
         <div class="profile__info">
           <div class="profile__container">
-            <h1 class="profile__name">Жак-Ив Кусто</h1>
+            <h1 class="profile__name"></h1>
             <button type="button" class="profile__edit-button">
               <img src="<%=require('./images/edit_button.svg')%>" class="profile__edit-logo" alt="Плюс">
             </button>
           </div>
-          <p class="profile__text">Исследователь океана</p>
+          <p class="profile__text"></p>
         </div>
         <button type="button" class="profile__add-button">
           <img src="<%=require('./images/add_button.svg')%>" class="profile__add-logo" alt="Плюс">
