--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
     </div>
   </div>
 
-  <div class="popup popup__update-avatar">
+  <div class="popup popup_update-avatar">
     <div class="popup__container">
       <button class="popup__button-close" type="button"></button>
       <h2 class="popup__header">Обновить аватар</h2>
@@ -109,10 +109,10 @@
     </div>
   </div>
 
-  <div class="popup popup__confirm">
+  <div class="popup popup_confirm">
     <div class="popup__container popup__container_confirm">
       <button class="popup__button-close" type="button"></button>
-      <form class="popup__form_confirm">
+      <form class="popup__form">
         <h2 class="popup__header popup__header_confirm">Вы уверены?</h2>
       </form>
       <button class="popup__button popup__button_confirm" type="submit" form="popup__form_confirm">Да</button>
